--- a/index.html
+++ b/index.html
@@ -286,6 +286,9 @@
 
   <!-- Footer -->
   <footer>
+    <h2>Contact details:</h2>
+    <p>Ph.No:+91 9150633273</p>
+    <p>E-mail: purushothamane@srmasc.ac.in | purushothaman.e2006@gmail.com</p>
     <p>&copy; 2025 Purushothaman.E | All Rights Reserved</p>
   </footer>
   <script>
